--- a/psc-pages.cabal
+++ b/psc-pages.cabal
@@ -25,6 +25,7 @@ executable psc-pages
                        text,
                        data-default,
                        filepath,
-                       directory
+                       directory,
+                       file-embed
   hs-source-dirs:      src
   default-language:    Haskell2010
