--- a/bower.json
+++ b/bower.json
@@ -15,15 +15,22 @@
     "tests"
   ],
   "dependencies": {
+    "purescript-monoid": "~0.2.0",
+    "purescript-foldable-traversable": "~0.3.0",
     "purescript-arrays": "~0.3.1",
     "purescript-enums": "~0.3.1",
-    "purescript-free": "~0.2.0",
+    "purescript-free": "~0.3.0",
     "purescript-globals": "~0.1.5",
     "purescript-graphs": "~0.2.0",
-    "purescript-quickcheck": "~0.4.0",
+    "purescript-quickcheck": "~0.5.0",
     "purescript-random": "~0.1.2",
     "purescript-refs": "~0.1.2",
     "purescript-unfoldable": "~0.2.0",
     "purescript-validation": "~0.0.3"
+  },
+  "resolutions": {
+    "purescript-monoid": "~0.2.0",
+    "purescript-foldable-traversable": "~0.3.0",
+    "purescript-tuples": "0.3.0"
   }
 }
