--- a/bower.json
+++ b/bower.json
@@ -26,11 +26,14 @@
     "purescript-random": "~0.1.2",
     "purescript-refs": "~0.1.2",
     "purescript-unfoldable": "~0.2.0",
-    "purescript-validation": "~0.0.3"
+    "purescript-validation": "~0.0.3",
+    "purescript-sets": "~0.3.1"
   },
   "resolutions": {
     "purescript-monoid": "~0.2.0",
     "purescript-foldable-traversable": "~0.3.0",
-    "purescript-tuples": "0.3.0"
+    "purescript-tuples": "0.3.0",
+    "purescript-sets": "~0.3.1",
+    "purescript-maps": "~0.3.0"
   }
 }
