--- a/psc-pages.cabal
+++ b/psc-pages.cabal
@@ -23,11 +23,13 @@ library
                        text,
                        data-default,
                        filepath,
-                       split
+                       split,
+                       Glob
   exposed-modules:     PscPages.RenderedCode
                      , PscPages.HtmlHelpers
                      , PscPages.Render
                      , PscPages.AsHtml
+                     , PscPages.AsHoogle
 
 executable psc-pages
   main-is:             Main.hs
@@ -43,7 +45,8 @@ executable psc-pages
                        text,
                        filepath,
                        directory,
-                       file-embed
+                       file-embed,
+                       Glob
   hs-source-dirs:      psc-pages
   ghc-options:         -Wall
   default-language:    Haskell2010
