More rearranging, don't rely on system locale
Rearrange code between modules and replace use of Data.Text.IO with
IO from Data.ByteString followed by encode/decode, to ensure that utf-8
is always used.

--- a/psc-pages.cabal
+++ b/psc-pages.cabal
@@ -20,6 +20,7 @@ library
                        cheapskate -any,
                        purescript >= 0.6.9.3 && < 0.7,
                        blaze-html,
+                       bytestring,
                        text,
                        data-default,
                        filepath,
@@ -36,6 +37,7 @@ library
                      , PscPages.AsHtml
                      , PscPages.AsHoogle
                      , PscPages.Output
+                     , PscPages.IOUtils
                      , PscPages.Program
                      , Paths_psc_pages
 
